# portfolio

./: .gitignore  README.md  gridsome.config.js  now.json  package-lock.json  package.json
.github/: dependabot.yml
blog/: building-on-types.md  firefox-for-web-dev.md  first-post.md  observing-systems.md  pathways-to-accessiblity.md  svg-3d-projection.md
blog/svg-3d-projection/: Vector3.js  main.js  svg-3d-projection.md
blog/wasm-getting-started/: wasm-intro.md
blog/wasm-getting-started/wasm-demo/: Cargo.toml
blog/wasm-getting-started/wasm-demo/src/: lib.rs
projects/: 5050-on-the-water.md  cilantro.md  portfolio.md  pwa-podcatcher.md
redirect/: now.json
src/: main.js
src/blog/: building-on-types.md  fes-hierarchy-of-needs.md  jamstack.md  observing-systems.md  put-down-the-js.md
src/components/: Card.vue  GlitchImage.vue  PageNavigation.vue  Waves.vue
src/layouts/: Default.vue
src/pages/: 404.vue  Articles.vue  Blog.vue  Contact.vue  Index.vue  Projects.vue  Resume.vue  Writing.vue
src/projects/: 5050-on-the-water.md  cilantro.md  portfolio.md  pwa-podcatcher.md
src/templates/: BlogPost.vue  ProjectPost.vue
src/theme/: base.scss
