[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["zac <cczac1@gmail.com>"]
description = "A basic demonstration of compiling Rust to WASM"
repository = "https://github.com/zacnomore/portfolio"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"